# Gammatek

./: .gitignore  ButtonDelegate.cpp  ButtonDelegate.h  CMakeLists.txt  Client.cpp  ClientLogic.cpp  ClientLogic.h  ClientWidget.cpp  ClientWidget.h  GrpcClient.cpp  GrpcClient.h  GrpcDevice.cpp  GrpcDevice.h  MaintainingService.h  Server.cpp  ServerLogic.cpp  ServerLogic.h  ServerWidget.cpp  ServerWidget.h  TableModel.cpp  TableModel.h  UdpClient.cpp  UdpClient.h  UdpServer.cpp  UdpServer.h  grpcserver.cpp  grpcserver.h
proto/: api.proto
